[gd_scene load_steps=21 format=3 uid="uid://b5yyaqd5fo0q0"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_klxhr"]
[ext_resource type="Texture2D" uid="uid://binvi46ene0s6" path="res://characters/mainPlayer.png" id="2_c8qqv"]
[ext_resource type="PackedScene" uid="uid://dc0dk2olfwm6s" path="res://scenes/inventory_ui.tscn" id="3_f3n52"]

[sub_resource type="CircleShape2D" id="CircleShape2D_cctgm"]
radius = 5.0

[sub_resource type="AtlasTexture" id="AtlasTexture_5ta46"]
atlas = ExtResource("2_c8qqv")
region = Rect2(200, 200, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_pj2iv"]
atlas = ExtResource("2_c8qqv")
region = Rect2(200, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_4djvm"]
atlas = ExtResource("2_c8qqv")
region = Rect2(200, 200, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_pvvld"]
atlas = ExtResource("2_c8qqv")
region = Rect2(200, 400, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_aff55"]
atlas = ExtResource("2_c8qqv")
region = Rect2(200, 600, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_k1qy2"]
atlas = ExtResource("2_c8qqv")
region = Rect2(0, 200, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_jgwau"]
atlas = ExtResource("2_c8qqv")
region = Rect2(0, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_5dr65"]
atlas = ExtResource("2_c8qqv")
region = Rect2(0, 200, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_del6x"]
atlas = ExtResource("2_c8qqv")
region = Rect2(0, 400, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_4drga"]
atlas = ExtResource("2_c8qqv")
region = Rect2(0, 600, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_wgtip"]
atlas = ExtResource("2_c8qqv")
region = Rect2(400, 200, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_xbmjp"]
atlas = ExtResource("2_c8qqv")
region = Rect2(400, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_vth7o"]
atlas = ExtResource("2_c8qqv")
region = Rect2(400, 200, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_2u6at"]
atlas = ExtResource("2_c8qqv")
region = Rect2(400, 400, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_y71gv"]
atlas = ExtResource("2_c8qqv")
region = Rect2(400, 600, 200, 200)

[sub_resource type="SpriteFrames" id="SpriteFrames_g2kw6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ta46")
}],
"loop": true,
"name": &"back_idle",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pj2iv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4djvm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pvvld")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aff55")
}],
"loop": true,
"name": &"back_walk",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_k1qy2")
}],
"loop": true,
"name": &"front_idle",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jgwau")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5dr65")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_del6x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4drga")
}],
"loop": true,
"name": &"front_walk",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wgtip")
}],
"loop": true,
"name": &"side_idle",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xbmjp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vth7o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2u6at")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y71gv")
}],
"loop": true,
"name": &"side_walk",
"speed": 8.0
}]

[node name="player" type="CharacterBody2D" groups=["player"]]
process_mode = 3
z_index = 1
y_sort_enabled = true
collision_layer = 2
collision_mask = 13
script = ExtResource("1_klxhr")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
light_mask = 3
visibility_layer = 3
position = Vector2(0, 9)
shape = SubResource("CircleShape2D_cctgm")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, 1)
scale = Vector2(0.13, 0.13)
sprite_frames = SubResource("SpriteFrames_g2kw6")
animation = &"front_walk"

[node name="Camera2D" type="Camera2D" parent="." groups=["player"]]
scale = Vector2(1, 1.00616)

[node name="interactUI" type="CanvasLayer" parent="."]
visible = false

[node name="ColorRect" type="ColorRect" parent="interactUI"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1028.0
offset_top = -488.0
offset_right = -954.0
offset_bottom = -450.0
grow_horizontal = 0
grow_vertical = 0
color = Color(0.686275, 0.168627, 0.317647, 0.286275)
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="interactUI/ColorRect"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "left click "
metadata/_edit_use_anchors_ = true

[node name="inventoryUI" type="CanvasLayer" parent="."]
visible = false

[node name="ColorRect" type="ColorRect" parent="inventoryUI"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -37.0
offset_top = -46.0
offset_right = 63.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
rotation = -0.000818345

[node name="inventory_ui" parent="inventoryUI" instance=ExtResource("3_f3n52")]

[node name="RayCast2D" type="RayCast2D" parent="."]
scale = Vector2(0.996973, 1)
target_position = Vector2(0, 21)
collision_mask = 13
collide_with_areas = true
collide_with_bodies = false
